<resources>
    <string name="app_name">zxing</string>
    <string name="sweep">扫一扫</string>
    <string name="zoom_small">缩小</string>
    <string name="zoom_big">放大</string>
    <string name="flashlight_on">开启闪光灯</string>
    <string name="flashlight_off">关闭闪光灯</string>
    <string name="bottom_hint">将取景框对准条形码位置,</string>
    <string name="bottom_hint2">即可自动扫描。</string>
    <string name="cancel_str">取消</string>
    <string name="sure_str">确定</string>
    <string name="msg_camera_framework_bug">您没有相机权限，请到系统设置里授权。</string>
</resources>
