<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <SurfaceView
        android:id="@+id/capture_preview_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center" />

    <com.common.zxing.view.ViewfinderView
        android:id="@+id/capture_viewfinder_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/transparent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/ll_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black">

            <LinearLayout
                android:id="@+id/top_leftLy"
                android:layout_width="wrap_content"
                android:layout_height="50dip"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/top_leftButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="30dp"
                    android:clickable="false"
                    android:duplicateParentState="true"
                    android:focusable="false"
                    android:text="@string/cancel_str"
                    android:textColor="@color/WHITE"
                    android:textSize="16dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/top_content"
                android:layout_width="wrap_content"
                android:layout_height="50dip"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/sweep"
                android:textColor="@android:color/white"
                android:textSize="18dip" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            >
            <Button
                android:id="@+id/zoom_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border_line_while"
                android:gravity="center"
                android:text="@string/zoom_small"
                android:textColor="#ffffff"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_bottom"
            android:layout_width="match_parent"
            android:layout_height="120dip"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/capture_flashlight"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:background="@drawable/scan_flashlight_normal" />

            <TextView
                android:id="@+id/tv_flashlight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/flashlight_on"
                android:textColor="@android:color/white"
                android:textSize="14dip" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            >
            <Button
                android:id="@+id/zoom_big"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border_line_while"
                android:textColor="#ffffff"
                android:text="@string/zoom_big"
                />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>